# esp32-bg96

./: .gitmodules  CMakeLists.txt
components/cellular_bg96/: CMakeLists.txt  cellular_config.h  cellular_logging.h  cellular_platform.c  cellular_platform.h  cellular_setup.c  cellular_setup.h
main/: CMakeLists.txt  main.c
